[gd_scene load_steps=9 format=2]

[ext_resource path="res://card/card.gd" type="Script" id=1]
[ext_resource path="res://_assets/art/PencilDreamCard.jpg" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 41 )

[node name="Card" type="TextureRect"]
margin_right = 64.0
margin_bottom = 107.0
rect_min_size = Vector2( 64, 107 )
rect_pivot_offset = Vector2( 32, 53 )
texture = ExtResource( 2 )
expand = true
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="CardArea" type="Area2D" parent="." groups=["card_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2( 32, 53 )
shape = SubResource( 6 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
